# koinEASY

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: logging.rs
src/assets/: draft.json  forms.json  lexemes.json
src/assets/Gentium/: Gentium-webfont.css
src/assets/css/: base.css  main.css
src/assets/gentium/web/: Gentium-webfont.css
src/components/: AppSidebar.vue  AppTopbar.vue  GreekInput.vue  InputComponent.vue  KeyboardComponent.vue  ThemeSwitch.vue  WordCard.vue
src/i18n/: index.ts
src/i18n/locales/: en.json
src/lib/: betaCode.ts  config.ts  data.ts  db.ts  dbChats.ts  dbDict.ts  diacriticsMap.ts  helpers.ts  keyMap.ts  keyboardLayout.ts  normalize.ts  requestProcess.ts  romanize.ts  wordAnalyze.ts  words.ts
src/pages/: about.vue  fast.vue  fun.vue  home.vue  settings.vue
src/router/: index.ts
src/stores/: settings.ts
