[package]
name = "koine-bros"
version = "0.25.1"
description = "Koine Greek Virtual Keyboard & Simple Analysis"
authors = [ "jos" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koine_bros_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-log = "2.7.0"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"


serde_json = "1.0.143"
log = "0.4.28"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# https://tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
